--- a/templates/animal/newAnimal.html.twig
+++ b/templates/animal/newAnimal.html.twig
@@ -13,5 +13,8 @@
 {% endblock %}
 
 {% block endjs %}
+    <script>
+        console.log("TEST ICI")
+    </script>
     <script src="{{ asset('js/newAndEditAjaxRaces.js') }}"></script>
 {% endblock  %}
