--- a/templates/annonce/annonce.html.twig
+++ b/templates/annonce/annonce.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends '/base.html.twig' %}
 
 {% block title %} MainController!{% endblock %}
 
-{% block main %}
-    {#    {% include 'Modules/alert.html.twig' %} #}
+{% block body %}
+{#        {% include 'Modules/alert.html.twig' %}#}
     {% for message in app.flashes('success') %}
         <div class="position-fixed p-3" style="z-index: 1000; top: 80px;right: 50px">
             <div class="alert alert-success">
@@ -33,13 +33,13 @@
 
         <div class="col-3 my-5 bg-dark text-light p-4">
 
-            {{ form_start(formS) }}
+            {{ form_start(formSearch) }}
             <div class="row">
                 <div class="col-6">
-                    {{ form_row(formS.secteurs) }}
+                    {{ form_row(formSearch.secteurs) }}
                 </div>
                 <div class="col-6">
-                    {{ form_row(formS.search) }}
+                    {{ form_row(formSearch.search) }}
                 </div>
 
             </div>
@@ -98,56 +98,13 @@
                             <td>
                                 <a href="{{ path('user_show',{id:d.users.id}) }}">{{ d.users.pseudo }}</a>
                             </td>
-{#                            <td>#}
-{#                                #}{# Publication de la sortie si elle est créée et que l'utilisateur connecté est bien l'organisateur #}
-{#                                {% if (o.users == app.user) and (o.etats.libelle == 'Créée') %}#}
-{#                                    <a href="{{ path('outing_published',{'id':o.id}) }}" class="btn btn-hover color-5"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="Publier">#}
-{#                                        <i class="fa fa-bullhorn"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                                #}{# Si l'utilisateur est inscrit, il peut se désister avant le début de l'activité #}
-{#                                {% if (app.user in o.attendees) and ((o.state.libelle == 'Ouverte') or (o.state.libelle == 'Clôturée')) %}#}
-{#                                    <a href="{{ path('outing_withdraw',{'id':o.id}) }}" class="btn btn-hover color-11"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="Se désister">#}
-{#                                        <i class="fa fa-user-minus"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                                #}{# Si l'utilisateur n'est pas dans la liste des participants est que le statut est ouvert, il peut s'inscrire #}
-{#                                {% if (app.user not in o.attendees) and (o.state.libelle == 'Ouverte') %}#}
-{#                                    <a href="{{ path('outing_register',{'id':o.id}) }}" class="btn btn-hover color-9"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="S'inscrire">#}
-{#                                        <i class="fa fa-user-plus"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                                #}{# Si l'utilisateur est bien l'organisateur et que l'activité n'a pas débutée, il peut l'annuler #}
-{#                                {% if (app.user == o.organizer) and ((o.state.libelle == 'Ouverte') or (o.state.libelle == 'Clôturée')) %}#}
-{#                                    <a href="{{ path('outing_cancel',{'id':o.id}) }}" class="btn btn-hover color-1"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="Annuler">#}
-{#                                        <i class="fa fa-ban"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                                #}{# Si l'utilisateur est bien l'organisateur et que l'activité n'est pas ouverte il peut la supprimer #}
-{#                                {% if (app.user == o.organizer) and (o.state.libelle == 'Créée') %}#}
-{#                                    <a href="{{ path('outing_delete',{'id':o.id}) }}" class="btn btn-hover color-10"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="Supprimer">#}
-{#                                        <i class="fa fa-trash"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                                #}{# Si l'utilisateur est bien l'organisateur et que l'activité n'est pas ouverte il peut la modifier #}
-{#                                {% if (app.user == o.organizer) and (o.state.libelle == 'Créée') %}#}
-{#                                    <a href="{{ path('outing_update',{'id':o.id}) }}" class="btn btn-hover color-8"#}
-{#                                       data-bs-toggle="tooltip" data-bs-placement="top" title="Modifier">#}
-{#                                        <i class="fa fa-pencil"></i>#}
-{#                                    </a>#}
-{#                                {% endif %}#}
-{#                            </td>#}
+
                         </tr>
                     {% endif %}
                 {% endfor %}
                 </tbody>
             </table>
-            {{ knp_pagination_render(annonces) }}
+{#            {{ knp_pagination_render(annonces) }}#}
         </div>
     </div>
 {% endblock %}
