--- a/templates/admin/utilisateurs.html.twig
+++ b/templates/admin/utilisateurs.html.twig
@@ -32,6 +32,7 @@
                 <th>Email</th>
                 <th>Roles</th>
                 <th>Photo</th>
+                <th>Actif</th>
                 <th>actions</th>
             </tr>
             </thead>
@@ -58,6 +59,9 @@
                     </th>
                     <th><input type="text" id="userPrenom{{ u.id }}" readonly class="form-control-plaintext"
                                value="{{ u.photo }}">
+                    </th>
+                    <th><input type="text" id="userPrenom{{ u.id }}" readonly class="form-control-plaintext"
+                               value="{{ u.isActive }}">
                     </th>
                     <th>
                         <button id="update{{ u.id }}" class="btn btn-secondary update"
