--- a/templates/animal/_form.html.twig
+++ b/templates/animal/_form.html.twig
@@ -4,20 +4,12 @@
 {#{{ form_end(form) }}#}
 
 <div class="row">
-    <h2 class="text-center">Fiche animal </h2>
+    <h5 class="text-center">Fiche animal </h5>
     <div class=" col-10 offset-1">
         <div class="card mb-3">
             <div class="row g-0">
-                <div class="col-md-3 p-3">
-                    {% if animal.photo %}
-                        <img src="{{ asset('uploads/animal_img/' ~  animal.photo) }}" class="img-fluid rounded-start"
-                             alt="Photo animal {{ animal.nom }}">
-                    {% else %}
-                        <img src="{{ asset('img/animal.jpg')}} " class="img-fluid rounded-start"
-                             alt="Photo profil de {{ animal.nom }}">
-                    {% endif %}
-                </div>
-                <div class="col-md-9">
+
+                <div class="col-md-12">
                     <div class="card-body">
                         <h5 class="card-title ps-3">{{ animal.nom }}</h5>
                         {{ form_start(formAnimal) }}
@@ -31,11 +23,26 @@
                                     <li class="list-group-item">{{ form_row(formAnimal.castre) }}</li>
                                     <li class="list-group-item">{{ form_row(formAnimal.puceElectro) }}</li>
                                     <li class="list-group-item">{{ form_row(formAnimal.tatouage) }}</li>
-                                    <div class="row md-9">
+                                    <li class="list-group-item">
+                                    <div class="row">
                                         <div class="col-6">{{ form_row(formAnimal.age) }}</div>
-                                            <div class="col-5">{{ form_row(formAnimal.anOuMois) }}</div>
+                                        <div class="col-6">{{ form_row(formAnimal.anOuMois) }}</div>
                                     </div>
-
+                                    </li>
+                                    <li class="list-group-item">
+                                        <div class="row">
+{#                                    <div class="col-md-3 p-2">#}
+                                        <div class="col-6">
+                                          {% if animal.photo %}
+                                            <img src="{{ asset('uploads/animal_img/' ~  animal.photo) }}" class="img-fluid rounded-start"
+                                                 alt="Photo animal {{ animal.nom }}">
+                                         {% else %}
+                                            <img src="{{ asset('img/animal.jpg')}} " class="img-fluid rounded-start"
+                                                 alt="Photo profil de {{ animal.nom }}">
+                                         {% endif %}
+                                        </div>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="col-6">
@@ -47,19 +54,24 @@
                                     <li class="list-group-item">{{ form_row(formAnimal.tailles) }}</li>
                                     <li class="list-group-item">{{ form_row(formAnimal.poils) }}</li>
                                     <li class="list-group-item">{{ form_row(formAnimal.couleurs) }}</li>
+                                    <li class="list-group-item">{{ form_row(formAnimal.photo) }}</li>
                                 </ul>
-                                <div class="mt-3 text-center">
-{#                                    <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
-                                    <button class="btn">{{ button_label|default('Save') }}</button>
-                                    <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
-                                </div>
-
                             </div>
+
                         </div>
 
                         {{ form_end(formAnimal) }}
+
+                        <div class="mt-3 text-center">
+{#                            <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
+                            <button class="btn btn-outline-secondary btn-lg">{{ button_label|default('Enregister') }}</button>
+                            <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
+                        </div>
+
                     </div>
                 </div>
+
+
             </div>
         </div>
     </div>
