--- a/templates/declaration/test.html.twig
+++ b/templates/declaration/test.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '/base.html.twig' %}
 
 {% block title %}Nouvelle déclaration{% endblock %}
 
@@ -35,7 +35,7 @@
             </div>
         </div>
     </div>
-     {% endverbatim %}
+    {% endverbatim %}
         <div class="col-10 offset-1">
             <h2>Créer une déclaration</h2>
             {{ form_start(form) }}
@@ -72,18 +72,18 @@
 {#                    </div>#}
                     <div class="row">
                         {% verbatim %}
-                <div class="col-5">
-                    <div class="form-floating mb-3">
-                        <select id="commune" class="form-select" v-model="selectedCommune" @change="filter(selectedCommune)">
-                            <option v-for="commune in communes" v-bind:value="commune">{{communes.nom}}</option>
-                        </select>
-                        <label for="city">Commune</label>
+                    <div class="col-5">
+                        <div class="form-floating mb-3">
+                             <select id="commune" class="form-select" v-model="selectedCommune" @change="filter(selectedCommune)">
+                            <option v-for="commune in communes" v-bind:value="commune">{{commune.nom}}</option>
+                            </select>
+                             <label for="city">Commune</label>
+                        </div>
                     </div>
-                </div>
                 <div class="col-5">
                     <div class="form-floating mb-3">
-                        <select id="place" class="form-select" v-model="selectedSecteur" @change="log(selectedSecteur)" required>
-                            <option v-for="secteur in selectedSecteurs" v-bind:value="secteur">{{secteurs.nom}}</option>
+                        <select id="secteur" class="form-select" v-model="selectedSecteur" @change="log(selectedSecteur)" required>
+                            <option v-for="secteur in selectedSecteurs" v-bind:value="secteur">{{secteur.nom}}</option>
                         </select>
                         <label for="secteur">Secteur</label>
                     </div>
@@ -92,7 +92,7 @@
                     <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#newSecteur"><i class="fa fa-plus"></i></button>
                 </div>
                <div v-if="secteurId">
-{#                {% endverbatim %}#}
+                {% endverbatim %}
                         <div class="col-6 d-none">
                             <div class="form-floating mb-3">
                                 {{ form_widget(form.secteurs, {'attr':{'v-model':'secteurId'}}) }}
@@ -151,7 +151,7 @@
                     </ul>
                 </div>
                 </div>
-{#                {% endverbatim %}#}
+                {% endverbatim %}
 
                     </div>
                 </div>
