--- a/templates/signalement/_form.html.twig
+++ b/templates/signalement/_form.html.twig
@@ -18,8 +18,8 @@
                             <div class="col-5">{{ form_widget(form.dateHeure.time) }}</div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
+{#                </div>#}
+{#                <div class="row">#}
                     <div class="col-12">
                         <div class="form-floating mb-3">
                             {{ form_widget(form.message,{'attr':{'style':'height:150px'}}) }}
@@ -28,16 +28,24 @@
                         </div>
                     </div>
 
+                    <div class="col-12">
+                        {{ form_label(form.auteur) }}
+                        <div class="row">
+                            <label for="name">{{ form_widget(form.auteur) }}</label>
+                            {{ form_errors(form.auteur) }}
+                        </div>
+                    </div>
+                    {{ form_end(form) }}
                     <div class="mt-3 text-center">
-                        {#                                    <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
-                        <button class="btn">{{ button_label|default('Save') }}</button>
+{#                                                            <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
+                        <button class="btn btn-outline-secondary btn-lg">{{ button_label|default('Save') }}</button>
                         <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
                     </div>
                 </div>
 
             </div>
 
-            {{ form_end(form) }}
+
 
         </div>
     </div>
