--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,17 +1,17 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %} Mon profil {% endblock %}
+{% block title %} Profil de : {{ user.pseudo }}{% endblock %}
 
 
 {% block body %}
 
     <div class="row">
-        <h2 class="text-center">Mon profil</h2>
-        <div class=" col-10 offset-1">
+        <br>
+        <div class=" col-4 offset-4">
             <div class="card mb-3">
                 <div class="row g-0">
-                    <div class="col-md-3 p-3">
+                    <div class="col-md-5 p-3">
                         {% if user.photo %}
                             <img src="{{ asset('uploads/user_img/' ~  user.photo) }}" class="img-fluid rounded-start"
                                  alt="Photo profil de {{ user.pseudo }}">
@@ -20,49 +20,30 @@
                                  alt="Photo profil de {{ user.pseudo }}">
                         {% endif %}
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-7">
                         <div class="card-body">
                             <h5 class="card-title ps-3">{{ user.pseudo }}</h5>
-                            {{ form_start(form) }}
-                            <div class="row">
-                                <div class="col-6">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">{{ form_row(form.pseudo) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.prenom) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.nom) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.photo) }}</li>
-                                    </ul>
-                                </div>
-                                <div class="col-6">
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">{{ form_row(form.telephone) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.email) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.password) }}</li>
-                                    </ul>
-                                    <div class="mt-3 text-center">
-                                        <button class="btn btn-success btn-lg me-5">Enregistrer</button>
-                                        <a href="{{ path('user_index') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
-                                    </div>
-                                </div>
-                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Prénom : {{ user.prenom }}</li>
+                                <li class="list-group-item">Nom : {{ user.nom }}</li>
+                                <li class="list-group-item">Email : {{ user.email }}</li>
 
-                            {{ form_end(form) }}
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="text-center">
-
+                {% if declaration is defined %}
+{#                    <a href="{{ path('outing_details',{'id':outing.id}) }}" class="btn btn-outline-secondary">Retour</a>#}
+{#                {% else %}#}
+                    <a href="{{ path('main_home') }}" class="btn btn-outline-secondary">Retour</a>
+                {% endif %}
             </div>
         </div>
     </div>
 
-
-
 {% endblock %}
-
-
-
 
 
 
